--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  google_fonts: ^2.0.0
   persistent_bottom_nav_bar: ^4.0.2
 
 dev_dependencies:
