--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   audioplayers: ^0.18.3
   cupertino_icons: ^1.0.2
+  expandable: ^5.0.1
   google_fonts: ^2.0.0
   group_button: ^2.1.0
   persistent_bottom_nav_bar: ^4.0.2
