--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   expandable: ^5.0.1
   google_fonts: ^2.0.0
   group_button: ^2.1.0
+  path_provider: ^2.0.1
   persistent_bottom_nav_bar: ^4.0.2
+  shared_preferences: ^2.0.5
   stop_watch_timer: ^1.1.0+1
 
 dev_dependencies:
